<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="60dp"
    tools:context="com.mbds.vamp.vamp_mobileapp.controllers.fragments.HomeFragment">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_margin="10dp"
        android:elevation="@dimen/cardview_compat_inset_shadow"
        android:id="@+id/home_car">

        <ImageView
            android:id="@+id/car_img"
            android:layout_width="wrap_content"
            android:layout_height="190dp"
            android:src="@drawable/ion"
            android:contentDescription="@string/car_img"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="95dp"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <ImageButton
                android:id="@+id/home_lock"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:src="@android:drawable/ic_lock_lock"
                android:contentDescription="@string/home_lock"/>

            <ImageButton
                android:id="@+id/home_control2"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:src="@android:drawable/ic_lock_power_off"
                android:contentDescription="@string/home_start"/>

            <ImageButton
                android:id="@+id/home_control3"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:src="@android:drawable/ic_menu_help"
                android:contentDescription="@string/home_start"/>

            <ImageButton
                android:id="@+id/home_control4"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:src="@android:drawable/ic_menu_help"
                android:contentDescription="@string/home_start"/>

            <ImageButton
                android:id="@+id/home_control5"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:src="@android:drawable/ic_menu_help"
                android:contentDescription="@string/home_start"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:text="@string/home_registerNumber"
                android:textStyle="bold"
                android:textSize="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:id="@+id/home_registerNumber"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:textStyle="bold"
                android:textSize="20dp"
                android:text="@string/home_brand"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:id="@+id/home_brand"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:textStyle="bold"
                android:textSize="20dp"
                android:text="@string/home_model"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:id="@+id/home_model"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="20dp"
                android:layout_marginEnd="30dp"
                android:text="@string/home_charge"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:id="@+id/home_charge"/>

        </LinearLayout>

    </LinearLayout>





</LinearLayout>
